- Reduce noisy Postgres logs from inserting duplicate onboarding rows.
- Added device icons for Apple Watch and Apple TV
- Added export action to group tag details.
- Improved display of user tags.
- Added 'transaction' tag which automatically populates from explicit culprits.
- Added beginnings of repository management to UI (behind `organizations:repos` feature).

Schema Changes
~~~~~~~~~~~~~~

- Added ``User.session_nonce`` column.
- Added ``CommitFileChange`` model.
- Added ``Repository.url`` column.
- Added ``Repository.provider`` column.
- Added ``Repository.config`` column.
- Added ``Repository.external_id`` column.
- Added ``Repository.status`` column.

API Changes
~~~~~~~~~~~

- Added ``/organizations/{org}/config/repos/`` endpoint.
- Added ``/organizations/{org}/repos/{repo}/`` endpoint.

Version 8.10
------------

- New and improved UI.
- Removed previously deprecated ``sentry celery`` command.
- Replaced the ``events`` queue with ``events.{preprocess,process,save}_event``.
- Added Danger (danger/danger) for monitoring various PR requirements.
- Enabled organization weekly report emails for all organizations.
- Add S3 filestore backend.
- ``SENTRY_FILESTORE`` deprecated and replaced with ``filestore.backend``
- ``SENTRY_FILESTORE_OPTIONS`` deprecated and replaced with ``filestore.options``
- Add watchOS support for cocoa interface.
- Fix support for internationalized Origins and raven-js.
- SSO is now enforced to access data within any org that has it set as a requirement.
- Improved rendering of weekly report email on mobile devices.

API Changes
~~~~~~~~~~~

- Add ``/organizations/{org}/repos/`` endpoint.
- Add ``/organizations/{org}/repos/{repo}/commits/`` endpoint.
- Add ``/projects/{org}/{project}/releases/{version}/commits/`` endpoint.
- SSO restrictions are now applied across session-based API authentication.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Repository`` model.
- Added ``Commit`` model.
- Added ``CommitAuthor`` model.